3.nginx_deploy/ingress_nginx_https.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: bradko-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: bradko-ns
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: my-nginx
---

# ingress-controller 설치 명령어
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: bradko-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 #첫번쨰 prefix제거
    cert-manager.io/cluster-issuer: my-issuer
spec:
  tls:
  - hosts:
    - "server.jooncodehyuk.site"
    secretName: server-jooncodehyuk-com-tls
  rules:
  - host: server.jooncodehyuk.site  # 설정하려는 도메인 이름. 제외시에 elb 주소로도 접근할수 있는 모든 도메인 접근 가능.
    http:
      paths:
      - path: /bradko/(.*) #모든 url요청을 nginx-service로 라우팅
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
